# vcoproc

./: .clang-format  CMakeLists.txt  Makefile.in  configure  gentreemd.sh  mockup-rest-server.py  myhttp.py  vcoproc.service
src/: CMakeLists.txt  json11.cpp  json11.hpp  sql.cpp  sql.hpp  utils.cpp  utils.hpp  vcoproc.cpp
