find_package(Threads REQUIRED)
find_package(CURL REQUIRED)
#find_package(SQLite3 REQUIRED)
find_library(SQLite3_LIBRARIES NAMES sqlite3 REQUIRED)
find_library(MARIADB_LIBRARIES NAMES mysqlclient REQUIRED)

if (NOT SQLite3_LIBRARIES)
	message(FATAL_ERROR "Could not find libsqlite3")
endif()

message(STATUS "CURL_LIBRARIES = ${CURL_LIBRARIES}")
message(STATUS "SQLite3_LIBRARIES ${SQLite3_LIBRARIES}")
message(STATUS "MARIADB_LIBRARIES ${MARIADB_LIBRARIES}")
include_directories(${CURL_INCLUDE_DIRS} ${SQLite3_INCLUDE_DIRS} ${MARIADB_INCLUDE_DIRES})
add_executable(vcoproc vcoproc.cpp json11.cpp utils.cpp sql.cpp)
target_link_libraries(vcoproc ${CMAKE_THREAD_LIBS_INIT} m ${CURL_LIBRARIES} ${SQLite3_LIBRARIES} ${MARIADB_LIBRARIES})
install(TARGETS vcoproc DESTINATION usr/bin)
